# stores-restful-api

./: .gitignore  Dockerfile  Makefile  README.md  app.py  create_tables.py  docker-compose.yml  item.py  pyproject.toml  requirements.txt  security.py  test.py  user.py
models/: item.py  store.py  user.py
resources/: item.py  store.py  user.py
stores_restful_api/: app.py  create_tables.py  data.db  user.py
